--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,34 @@
-awsebcli==3.14.6
-boto3==1.9.44
-botocore==1.12.44
+asgiref==3.2.3
+awsebcli==3.16.0
+boto3==1.10.34
+botocore==1.13.34
 cement==2.8.2
 certifi==2018.10.15
 chardet==3.0.4
 colorama==0.3.9
 dj-database-url==0.5.0
-Django==2.1.3
+Django==3.0
 django-heroku==0.3.1
 django-storages==1.7.1
 docutils==0.14
+future==0.16.0
 gunicorn==19.9.0
 idna==2.7
 jmespath==0.9.3
-pathspec==0.5.5
-Pillow==5.3.0
+pathspec==0.5.9
+Pillow==6.2.1
 psycopg2==2.7.6.1
+pypiwin32==223
 python-dateutil==2.7.5
 pytz==2018.7
+pywin32==227
 PyYAML==3.13
-requests==2.20.1
-s3transfer==0.1.13
+requests==2.22.0
+s3transfer==0.2.1
 semantic-version==2.5.0
 six==1.11.0
+sqlparse==0.3.0
 termcolor==1.1.0
-urllib3==1.22
+urllib3==1.25.7
+wcwidth==0.1.7
 whitenoise==4.1.1
