added changes for heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,26 @@
-asgiref==3.2.3
-awsebcli==3.16.0
-boto3==1.10.34
-botocore==1.13.34
-cement==2.8.2
-certifi==2018.10.15
-chardet==3.0.4
-colorama==0.3.9
+asgiref==3.2.10
+boto3==1.14.13
+botocore==1.17.13
+certifi==2020.6.20
 dj-database-url==0.5.0
-Django==2.2
+Django==3.0.7
 django-heroku==0.3.1
-django-storages==1.7.1
-docutils==0.14
-future==0.16.0
-gunicorn==19.9.0
-idna==2.7
-jmespath==0.9.3
-pathspec==0.5.9
-Pillow==6.2.1
-psycopg2==2.7.6.1
-python-dateutil==2.7.5
-pytz==2018.7
-PyYAML==3.13
-requests==2.22.0
-s3transfer==0.2.1
-semantic-version==2.5.0
-six==1.11.0
-sqlparse==0.3.0
-termcolor==1.1.0
-urllib3==1.25.7
-wcwidth==0.1.7
-whitenoise==4.1.1
+django-storages==1.9.1
+docutils==0.15.2
+gunicorn==20.0.4
+jmespath==0.10.0
+llvmlite==0.30.0
+numba==0.45.0
+Pillow==7.1.2
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+s3transfer==0.3.3
+scanpy==1.4.6
+scvi==0.6.1
+six==1.15.0
+sqlparse==0.3.1
+urllib3==1.25.9
+whitenoise==5.1.0
