--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,21 @@
-asgiref==3.2.10
-boto3==1.14.13
-botocore==1.17.13
-certifi==2020.6.20
+asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+boto3==1.17.64
+botocore==1.20.64
+certifi==2020.12.5
 dj-database-url==0.5.0
-Django==3.0.7
-django-heroku==0.3.1
-django-storages==1.9.1
-docutils==0.15.2
-gunicorn==20.0.4
+Django @ file:///tmp/build/80754af9/django_1617740316746/work
+django-storages==1.11.1
+gunicorn==20.1.0
 jmespath==0.10.0
-llvmlite==0.30.0
-numba==0.45.0
-Pillow==7.1.2
-psycopg2==2.8.5
-psycopg2-binary==2.8.5
-pyparsing==2.4.7
+olefile==0.46
+Pillow @ file:///C:/ci/pillow_1617386320391/work
+psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
-pytz==2020.1
-s3transfer==0.3.3
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+s3transfer==0.4.2
 six==1.15.0
-sqlparse==0.3.1
-urllib3==1.25.9
-whitenoise==5.1.0
+sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+urllib3==1.26.4
+whitenoise==5.2.0
+wincertstore==0.2
