--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+asgiref==3.3.4
 boto3==1.17.64
 botocore==1.20.64
 certifi==2020.12.5
 dj-database-url==0.5.0
-Django @ file:///tmp/build/80754af9/django_1617740316746/work
+Django==3.2
 django-storages==1.11.1
 gunicorn==20.1.0
 jmespath==0.10.0
 olefile==0.46
-Pillow @ file:///C:/ci/pillow_1617386320391/work
-psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
+Pillow==8.2.0
+pip==21.0.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pytz==2021.1
 s3transfer==0.4.2
+setuptools==52.0.0.post20210125
 six==1.15.0
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse==0.4.1
 urllib3==1.26.4
+wheel==0.36.2
 whitenoise==5.2.0
 wincertstore==0.2
