--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 pytz==2021.1
 s3transfer==0.4.2
-setuptools==52.0.0.post20210125
+setuptools==56.1.0
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.4
